--- a/requirements.txt
+++ b/requirements.txt
@@ -96,7 +96,7 @@ mysqlclient==1.4.6
 Naked==0.1.31
 newrelic==5.6.0.135
 novo-jsobj==0.0.2
-numpy==1.19.1
+numpy
 oauth2client==4.1.3
 openapi-codec==1.3.2
 optionaldict==0.1.1
