--- a/requirements.txt
+++ b/requirements.txt
@@ -151,7 +151,7 @@ six==1.12.0
 smmap==3.0.1
 snowballstemmer==1.9.0
 Sphinx==2.1.2
-sphinx-bootstrap-theme==0.7.1
+sphinx-bootstrap-theme
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
 sphinxcontrib-htmlhelp==1.0.2
