--- a/requirements.txt
+++ b/requirements.txt
@@ -128,7 +128,8 @@ pyparsing==2.4.2
 PyPDF2==1.26.0
 python-crontab==2.3.8
 python-dateutil==2.8.0
-python-ldap
+# python-ldap
+ldap3
 python-memcached==1.59
 python-redis-lock==3.7.0
 pytz==2025.2
