--- a/requirements.txt
+++ b/requirements.txt
@@ -24,10 +24,10 @@ click-repl==0.2.0
 colorama==0.4.1
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==2.8
+cryptography
 cx-Oracle==7.2.0
 decorator==4.4.2
-Django==2.2.28
+Django
 django-appconf==1.0.3
 django-celery-beat==2.1.0
 django-compressor==2.3
@@ -62,7 +62,7 @@ geocoder==1.38.1
 geographiclib==1.49
 geopy==1.21.0
 geos==0.2.2
-gevent==1.4.0
+gevent
 gitdb==4.0.2
 gitdb2==4.0.2
 GitPython==3.0.5
@@ -105,7 +105,7 @@ paramiko==2.7.2
 passlib==1.7.1
 pdfkit==0.6.1
 piexif==1.1.3
-Pillow==6.1.0
+Pillow
 pipenv==2018.11.26
 ply==3.11
 progress==1.5
@@ -118,7 +118,7 @@ pycparser==2.19
 pycryptodome==3.9.7
 pyfcm==1.4.7
 Pygments==2.4.2
-PyJWT==1.7.1
+PyJWT
 pyminizip==0.2.6
 PyMySQL==0.9.3
 PyNaCl==1.4.0
