--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ cached-property==1.5.2
 celery==5.2.7
 celery-progress==0.0.10
 certifi==2019.6.16
-cffi==1.12.3
+cffi
 chardet==3.0.4
 click==8.1.3
 click-completion==0.5.1
