--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ eventlet==0.26.1
 Flask==2.2.5
 Flask-Migrate==4.1.0
 Flask-Minify==0.50
+Flask-Login
 Flask-SQLAlchemy==3.0.5
 flower==0.9.3
 future==0.18.2
